Fix align header

--- a/css/style.css
+++ b/css/style.css
@@ -73,9 +73,9 @@ h2 {
 }
 
 .header__photographerPage {
+  max-width: 1200px;
   width: 100%;
   height: 300px;
-  margin: 0 100px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   background-color: #FAFAFA;
@@ -85,7 +85,7 @@ h2 {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  padding-left: 30px;
+  margin-left: 100px;
 }
 .header__photographerPage--name {
   font-size: 55px;
