--- a/sass/layout/_header_photographer.scss
+++ b/sass/layout/_header_photographer.scss
@@ -1,8 +1,7 @@
 .header__photographerPage {
-    //max-width: 1200px;
+    max-width: 1200px;
     width: 100%;
     height: 300px;
-    margin: 0 100px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     background-color: $colour-bg-tertiary;
@@ -11,7 +10,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
-        padding-left: 30px;
+        margin-left: 100px;
     }
     &--name {
         font-size: 55px;
